examples/test/testpolicy10945.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10945
  namespace: namespace43
spec:
  podSelector:
    matchLabels:
      key49: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value45
      podSelector:
        matchLabels:
          key1: value32
          key18: value5
          key22: value49
